# puc_mlops

./: .gitignore  README.md  pipeline.yml  pyproject.toml
.github/workflows/: pipeline.yml
dataops_mlops/: main.py  requirements.txt
dataops_mlops_old/: test_train.py  train_notebook.ipynb
files_old/: environment.yml
notebooks/: dataops_datadrift.ipynb  model_registry.ipynb
src/puc_mlops/: train.py  train_old.py
tests/: desafio_02.ipynb  test_train.py
