[project]
name = "puc_mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "mlflow (>=3.1.0,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pycodestyle (>=2.13.0,<3.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "puc_mlops", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
