[project]
name = "puc-mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "redsonlopez",email = "redsonlopez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mlflow (>=3.1.0,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)",
    "dagshub (>=0.5.10,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
